--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,7 +1,10 @@
 name: Android CI
 on:
+  push:
+    branches: [ master ]
   pull_request:
-    branches: [master]
+    branches: [ master ]
+  workflow_dispatch:
 
 jobs:
   test:
