--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,11 +13,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 11
+      - name: set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'corretto'
+          distribution: 'adopt'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
