--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
 
     implementation "com.google.dagger:hilt-android:2.38.1"
+    implementation 'androidx.room:room-common:2.4.2'
     kapt "com.google.dagger:hilt-compiler:2.38.1"
+
+    def room_version= "2.2.6"
+    implementation"androidx.room:room-runtime:$room_version"
+    kapt"androidx.room:room-compiler:$room_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
